import { test, expect } from 'vitest'
import { fieldValuesToAnswers } from '../src'
import { test, expect } from 'vitest'
import { FieldKindEnum } from '@heyform-inc/shared-types-enums'

const field = {
  id: 'EMAIL',
  title: 'number.test',
  kind: FieldKindEnum.EMAIL
}

test('correct value should be verified', () => {
  const answer = fieldValuesToAnswers(
    [
      {
        ...field,
        validations: { required: true }
      }
    ],
    {
      EMAIL: 'email@example.com'
    }
  )

  expect(answer).toMatchSnapshot()
})

test('undefined value should be verified if not required', () => {
  const value = fieldValuesToAnswers(
    [
      {
        ...field,
        validations: { required: false }
      }
    ],
    {}
  )

  expect(value).toMatchSnapshot()
})

test('empty value should throw error', () => {
  expect(() => {
    fieldValuesToAnswers([field], {
      EMAIL: ''
    })
  }).toThrow('Please enter a valid email address')
})

test('invalid value should throw error', () => {
  expect(() => {
    fieldValuesToAnswers([field], {
      EMAIL: 'email.example@com'
    })
  }).toThrow('Please enter a valid email address')
})
